# Rhythmic

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/src/core/: logging.cpp  main.cpp  time.cpp
engine/src/io/: file.cpp  filesystem.cpp
engine/src/util/: guid.cpp
rhythmic/: CMakeLists.txt  resource.h  windows.rc
rhythmic/game/: change_log.txt  readme.txt
rhythmic/game/licenses/: glm.txt
rhythmic/sprites_source/: aurulent-sans-mono.xcf  catcher.blend  catcher.blend1  catcher_render_prep.blend  catcher_render_prep.blend1  hud.blend  hud.blend1  menus_3d_world.blend  menus_3d_world.blend1  mountains.blend  note.blend  note.blend1  note_4.blend  note_cymbal.blend  note_cymbal.blend1  note_icon.xcf  note_open.blend  note_open.blend1  note_open_2.blend  note_open_2.blend1  note_render_prep.blend  note_render_prep_2.blend  note_render_prep_2.blend1  revised-note-venerabela.blend  revised-note-venerabela.blend1
rhythmic/sprites_source/new_catcher/: rhythmic_piston_thing.blend  rhythmic_piston_thing_2.blend
rhythmic/sprites_source/new_note/: Rhythmic_Rectangle_Test.blend  Rhythmic_Rectangle_Test.blend1  note_noise.xcf  rectangle_test_3.blend  sp_noise.xcf
rhythmic/sprites_source/ui_elements/: tool_bar.xcf
rhythmic/src/: main.cpp
rhythmic/src/audio/: audio.cpp  audio.hpp  audio_system.cpp  audio_system.hpp
rhythmic/src/chart/: chart.cpp  chart.hpp  chart_parser.cpp  chart_parser.hpp  midi_parser.cpp  midi_parser.hpp  song.cpp  song.hpp
rhythmic/src/container/: bg_image.hpp  bg_image_container.cpp  bg_image_container.hpp  binding_container.cpp  binding_container.hpp  custom_container.cpp  custom_container.hpp  player_container.cpp  player_container.hpp  song_container.cpp  song_container.hpp
rhythmic/src/events/: event_system.cpp  event_system.hpp  events_common.hpp
rhythmic/src/game/: color.hpp  engine_vals.cpp  engine_vals.hpp  file_current_song.cpp  file_current_song.hpp  globals.cpp  globals.hpp  menu_music_player.cpp  menu_music_player.hpp  modifiers.cpp  modifiers.hpp  music_player.cpp  music_player.hpp  player.cpp  player.hpp  player_renderer.cpp  player_renderer.hpp  scoring.hpp  version_control.cpp  version_control.hpp
rhythmic/src/input/: input.cpp  input.hpp  input_game.cpp  input_game.hpp  input_handlers.cpp  input_handlers.hpp  input_impl_helper.hpp  input_structures.hpp
rhythmic/src/io/: data_window.cpp  io.cpp  io.hpp  io_image.cpp  io_image.hpp  io_window.cpp  io_window.hpp
rhythmic/src/menus/: canvas.cpp  canvas.hpp  canvas_data.hpp  canvas_factory.cpp  canvas_factory.hpp  menu_system.cpp  menu_system.hpp  (+3 more)
(+202 files in other folders)
